--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <ul>
                     <ul class="xmb_row">
                         <li class="xmb_row_text">Welcome!</li>
-                        <div class="infowrapper">
+                        <div hidden class="infowrapper">
                             <h1>Welcome to AminStation 3!</h1>
-                            <p>Navigate through the XMB using the arrow keys to have a look around.</p>
+                            <p>Navigate through the XMB menu using the arrow keys to have a look around.</p>
                             <p>Made by Amin Gatta</p>
                         </div>
                     </ul>
