Adding icons, fonts & bit of style -> css problems todo solve them

--- a/index.html
+++ b/index.html
@@ -34,84 +34,111 @@
         <section class="xmb">
 
             <ul class="xmb_col active">
-                <li class="xmb_col_title">Home</li>
-                <ul>
-                    <ul class="xmb_row">
+                <ul class="xmb_col_header">
+                    <img src="assets/icons/xmb_home.png" alt="xmb_home" class="xmb_col_icons">
+                    <li class="xmb_col_title">Home</li>
+                </ul>
+
+                <ul class="xmb_row active">
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Welcome!</li>
-                        <div class="infowrapper">
+                        <div hidden class="infowrapper">
                             <h1>Welcome to AminStation 3!</h1>
                             <p>Navigate through the XMB using the arrow keys to have a look around.</p>
                             <p>Made by Amin Gatta</p>
                         </div>
                     </ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">User 1</li>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Who am I?</li>
                     </ul>
                 </ul>
             </ul>
 
             <ul class="xmb_col">
-                <li class="xmb_col_title">Settings</li>
-                <ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">System Update</li>
-                        <li class="xmb_row_info">Update your firmware</li>
+                <ul class="xmb_col_header">
+                    <img src="assets/icons/xmb_projects.png" alt="xmb_projects" class="xmb_col_icons">
+                    <li class="xmb_col_title">Projets</li>
+                </ul>
+
+                <ul class="xmb_row">
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Projet 1</li>
                     </ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">Display Settings</li>
-                        <li class="xmb_row_info">Adjust your display</li>
-                    </ul class="xmb_row_text">
-                    <ul class="xmb_row">
-                        <li>System Settings</li>
-                        <li class="xmb_row_info">Adjust system settings</li>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Projet 2</li>
+                    </ul>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Projet 3</li>
+                    </ul>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Projet 4</li>
                     </ul>
                 </ul>
             </ul>
 
             <ul class="xmb_col">
-                <li class="xmb_col_title">Photos</li>
-                <ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">Test</li>
+                <ul class="xmb_col_header">
+                    <img src="assets/icons/xmb_contact.png" alt="xmb_contact" class="xmb_col_icons">
+                    <li class="xmb_col_title">Contacts</li>
+                </ul>
+
+                <ul class="xmb_row">
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Linkedin</li>
                     </ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">Test</li>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Github</li>
+                    </ul>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Mail</li>
                     </ul>
                 </ul>
             </ul>
 
             <ul class="xmb_col">
-                <li class="xmb_col_title">Music</li>
-                <ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">2Pac</li>
-                    </ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">Biggie</li>
-                    </ul>
+                <ul class="xmb_col_header">
+                    <img src="assets/icons/xmb_settings.png" alt="xmb_settings" class="xmb_col_icons">
+                    <li class="xmb_col_title">Settings</li>
                 </ul>
-            </ul>
 
-            <ul class="xmb_col">
-                <li class="xmb_col_title">Video</li>
-                <ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">YouTube</li>
+                <ul class="xmb_row">
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <ul>
+                            <li class="xmb_row_text">System Update</li>
+                            <li class="xmb_row_info">Update your firmware</li>
+                        </ul>
                     </ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">Amazon Prime Video</li>
-                    </ul>
-                </ul>
-            </ul>
 
-            <ul class="xmb_col">
-                <li class="xmb_col_title">Games</li>
-                <ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">Uncharted 3</li>
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <ul>
+                            <li class="xmb_row_text">Display Settings</li>
+                            <li class="xmb_row_info">Adjust your display</li>
+                        </ul>
                     </ul>
-                    <ul class="xmb_row">
-                        <li class="xmb_row_text">God of War 3</li>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <ul>
+                            <li class="xmb_row_text">System Settings</li>
+                            <li class="xmb_row_info">Adjust system settings</li>
+                        </ul>
                     </ul>
                 </ul>
             </ul>
