--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <img src="assets/images/xmb_noanim.jpg" alt="xmb_bg">
 
     
-    <section class="title" id="title">
+    <section class="header" id="header">
         <h1>AS3</h1>
         <p>AminStation 3</p>
     </section>
 
-    <section id="warning">
+    <section id="disclaimer">
         <p class="warninghead">DISCLAIMER:</p>
         <p>This is a recreation of the PS3's XMB menu. This project is used for demonstrational purposes and the design and its rights belong to Sony.</p>
     </section>
