a bit of layout + glowing text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </ul>
 
                 <ul class="xmb_row active">
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content focus">
                         <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Welcome!</li>
 
@@ -64,12 +64,36 @@
 
             <ul class="xmb_col">
                 <ul class="xmb_col_header">
+                    <img src="assets/icons/xmb_contact.png" alt="xmb_contact" class="xmb_col_icons">
+                    <li class="xmb_col_title">Compétences</li>
+                </ul>
+
+                <ul class="xmb_row">
+                    <ul class="xmb_row_content focus">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Angular</li>
+                    </ul>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Symfony</li>
+                    </ul>
+
+                    <ul class="xmb_row_content">
+                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <li class="xmb_row_text">Docker</li>
+                    </ul>
+                </ul>
+            </ul>
+
+            <ul class="xmb_col">
+                <ul class="xmb_col_header">
                     <img src="assets/icons/xmb_projects.png" alt="xmb_projects" class="xmb_col_icons">
                     <li class="xmb_col_title">Projets</li>
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content focus">
                         <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Projet 1</li>
                     </ul>
@@ -98,7 +122,7 @@
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content focus">
                         <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Linkedin</li>
                     </ul>
@@ -122,7 +146,7 @@
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content focus">
                         <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
                             <li class="xmb_row_text">System Update</li>
