working vertical nav -> todo layout

--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
 
     <section id="clock">
         <div class="clock-container">
+            <div id="trophy">
+                <img src="assets/icons/xmb_trophy.png" alt="trophy_icon" id="trophy_icon">
+                <p id="score">0</p>
+            </div>
             <p id="date"></p>
         </div>
-    </section>
-
-    <section id="trophy">
-        <img src="assets/icons/xmb_trophy.png" alt="trophy_icon" id="trophy_icon">
-        <p id="score">0</p>
     </section>
 
     <main class="menu">
