--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="disclaimer">
-        <p class="warninghead">DISCLAIMER:</p>
+        <p class="disclaimerHead">DISCLAIMER:</p>
         <p>This is a recreation of the PS3's XMB menu. This project is used for demonstrational purposes and the design and its rights belong to Sony.</p>
     </section>
 
@@ -53,7 +53,7 @@
         </div>
     </section>
 
-    <main class="menu">
+    <main class="menu" id="menu">
         <section id="xmb">
 
             <ul class="xmb_col">
