Allow multisound in same time + preparation of enter&esc eventlistener + adding icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="./style/bg_config.css"> <!--  backgroundStyleSheet -->
 
-    <link rel="icon" type="image/x-icon" href="./assets/icons/icon_ps3.svg">
+    <link rel="icon" type="image/x-icon" href="./assets/icons/as3.svg">
 
     <!-- Start background scripts -->
     <script src="./js/bg_config.js"></script>
@@ -35,6 +35,9 @@
     
     <section class="header" id="header">
         <h1>AS3</h1>
+        <!-- <h1>
+            <img src="assets/icons/as3.svg" alt="">
+        </h1> -->
         <p>AminStation 3</p>
     </section>
 
@@ -64,7 +67,7 @@
 
                 <ul class="xmb_row active">
                     <ul class="xmb_row_content focus">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/xmb_welcome.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Welcome!</li>
 
                         <div hidden class="infowrapper">
@@ -83,23 +86,23 @@
 
             <ul class="xmb_col">
                 <ul class="xmb_col_header">
-                    <img src="assets/icons/xmb_contact.png" alt="xmb_contact" class="xmb_col_icons">
+                    <img src="assets/icons/xmb_skills.png" alt="xmb_contact" class="xmb_col_icons">
                     <li class="xmb_col_title">Compétences</li>
                 </ul>
 
                 <ul class="xmb_row">
                     <ul class="xmb_row_content focus">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/xmb_angular.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Angular</li>
                     </ul>
 
                     <ul class="xmb_row_content">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/xmb_symfony.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Symfony</li>
                     </ul>
 
                     <ul class="xmb_row_content">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/xmb_docker.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Docker</li>
                     </ul>
                 </ul>
@@ -142,12 +145,12 @@
 
                 <ul class="xmb_row">
                     <ul class="xmb_row_content focus">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/xmb_linkedin.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Linkedin</li>
                     </ul>
 
                     <ul class="xmb_row_content">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/xmb_github.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Github</li>
                     </ul>
 
