Adding more icons + preparation for infowrapper

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <img src="assets/icons/xmb_welcome.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Welcome!</li>
 
-                        <div hidden class="infowrapper">
+                        <div class="infowrapper">
                             <h1>Welcome to AminStation 3!</h1>
                             <p>Navigate through the XMB menu using the arrow keys to have a look around.</p>
                             <p>Made by Amin Gatta</p>
@@ -78,8 +78,13 @@
                     </ul>
 
                     <ul class="xmb_row_content">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/user.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Who am I?</li>
+
+                        <div class="infowrapper">
+                            <h1>Test</h1>
+                            <p>Toto tata</p>
+                        </div>
                     </ul>
                 </ul>
             </ul>
@@ -155,7 +160,7 @@
                     </ul>
 
                     <ul class="xmb_row_content">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/contact_me.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Mail</li>
                     </ul>
                 </ul>
@@ -169,18 +174,16 @@
 
                 <ul class="xmb_row">
                     <ul class="xmb_row_content focus">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/bg_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">System Update</li>
-                            <li class="xmb_row_info">Update your firmware</li>
+                            <li class="xmb_row_text">Display Settings</li>
                         </ul>
                     </ul>
 
                     <ul class="xmb_row_content">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/sound_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">Display Settings</li>
-                            <li class="xmb_row_info">Adjust your display</li>
+                            <li class="xmb_row_text">Sound Settings</li>
                         </ul>
                     </ul>
 
