--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <ul class="xmb_row_content focus">
                         <img src="assets/icons/bg_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">Display Settings</li>
+                            <li class="xmb_row_text">Theme Settings</li>
                         </ul>
                     </ul>
 
@@ -190,8 +190,8 @@
                     <ul class="xmb_row_content">
                         <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">System Settings</li>
-                            <li class="xmb_row_info">Adjust system settings</li>
+                            <li class="xmb_row_text">Date & time</li>
+                            <li class="xmb_row_info">Adjust date & time settings</li>
                         </ul>
                     </ul>
                 </ul>
