Adding transition + setup infowrapper + notify WIP

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     </section>
 
     <main class="menu" id="menu">
+        <p id="wip">WIP</span>
         <section id="xmb">
 
             <ul class="xmb_col">
@@ -70,10 +71,12 @@
                         <img src="assets/icons/xmb_welcome.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Welcome!</li>
 
-                        <div class="infowrapper">
-                            <h1>Welcome to AminStation 3!</h1>
-                            <p>Navigate through the XMB menu using the arrow keys to have a look around.</p>
-                            <p>Made by Amin Gatta</p>
+                        <div class="about-bg">
+                            <div class="infowrapper">
+                                <h1>Welcome to AminStation 3!</h1>
+                                <p>Navigate through the XMB menu using the arrow keys to have a look around.</p>
+                                <p>Made by Amin Gatta</p>
+                            </div>
                         </div>
                     </ul>
 
@@ -81,9 +84,11 @@
                         <img src="assets/icons/user.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Who am I?</li>
 
-                        <div class="infowrapper">
-                            <h1>Test</h1>
-                            <p>Toto tata</p>
+                        <div class="about-bg">
+                            <div class="infowrapper">
+                                <h1>Test</h1>
+                                <p>Toto tata</p>
+                            </div>
                         </div>
                     </ul>
                 </ul>
@@ -123,6 +128,13 @@
                     <ul class="xmb_row_content focus">
                         <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Projet 1</li>
+
+                        <div class="about-bg">
+                            <div class="infowrapper">
+                                <h1>Test</h1>
+                                <p>Toto tata</p>
+                            </div>
+                        </div>
                     </ul>
 
                     <ul class="xmb_row_content">
