--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <script defer src="js/app.js"></script>
 </head>
 <body>
-    <audio id="startup" src="assets/sounds/startup.mp3" type="audio/mp3"></audio>
+    <iframe src="assets/sounds/silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+    <audio id="startup" preload="auto" autoplay loop>
+        <source src="assets/sounds/startup.mp3" type="audio/mp3">
+    </audio>
+
     <audio id="nav" src="assets/sounds/nav.mp3" type="audio/mpeg"></audio>
 
     <!-- background rendering script -->
