--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
     <script defer src="js/app.js"></script>
 </head>
 <body>
-    <iframe src="assets/sounds/silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-    <audio id="startup" preload="auto" autoplay loop>
-        <source src="assets/sounds/startup.mp3" type="audio/mp3">
-    </audio>
-
+    <audio id="startup" src="assets/sounds/startup.mp3" type="audio/mp3"></audio>
+    
     <audio id="nav" src="assets/sounds/nav.mp3" type="audio/mpeg"></audio>
 
     <!-- background rendering script -->
@@ -61,7 +58,7 @@
     </section>
 
     <main class="menu" id="menu">
-        <p id="wip">WIP</span>
+        <p id="wip">WIP</p>
         <section id="xmb">
 
             <ul class="xmb_col">
