add new icon + fix clock minutes + fix xmb_row_content css:white-space

--- a/index.html
+++ b/index.html
@@ -190,18 +190,20 @@
                         <img src="assets/icons/bg_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
                             <li class="xmb_row_text">Theme Settings</li>
+                            <li class="xmb_row_info">Adjust theme settings</li>
                         </ul>
                     </ul>
 
                     <ul class="xmb_row_content">
                         <img src="assets/icons/sound_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">Sound Settings</li>
+                            <li class="xmb_row_text">Sounds Settings</li>
+                            <li class="xmb_row_info">Adjust sounds settings</li>
                         </ul>
                     </ul>
 
                     <ul class="xmb_row_content">
-                        <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
+                        <img src="assets/icons/xmb_date_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
                             <li class="xmb_row_text">Date & time</li>
                             <li class="xmb_row_info">Adjust date & time settings</li>
