--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
 
     <!-- background rendering script -->
     <script src="js/render.js"></script>
+
+    <section id="welcomer">
+        <div id="welcomerText">
+            <p>Welcome,</p>
+            <br>
+            <br>
+            <p>This website has been made as a real experience, sounds will be played.</p>
+            <br>
+            <br>
+            <p>Press OK to continue.</p>
+            <br>
+            <br>
+            <p class="okBtn">OK</p>
+        </div>
+
+        <div id="welcomerBtn">
+            <!-- EnterKey icon -->
+            <p>Valider</p>
+        </div>
+    </section>
     
     <section class="header" id="header">
         <h1>AS3</h1>
