spliting vars in var file + finish welcomer + welcome sound

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<script id="ParticleFragment" src="js/shaders/particle_fragment.glsl.js"></script>
     <!-- End background scripts -->
 
+    <script defer src="js/vars.js"></script>
+
     <script defer src="js/clock.js"></script>
     <script defer src="js/nav.js"></script>
     <script defer src="js/app.js"></script>
@@ -49,7 +51,7 @@
         </div>
 
         <div id="welcomerBtn">
-            <!-- EnterKey icon -->
+            <img class="details_icon" src="assets/icons/enterkey.png" alt="enterKey">
             <p>Valider</p>
         </div>
     </section>
@@ -95,7 +97,7 @@
                         <div class="about-bg">
                             <div class="infowrapper">
                                 <h1>Welcome to AminStation 3!</h1>
-                                <p>Navigate through the XMB menu using the arrow keys to have a look around.</p>
+                                <p>Navigate through the XMB menu using the arrow keys to have a look around, <br> press enter and esc to open/close a menu.</p>
                                 <p>Made by Amin Gatta</p>
                             </div>
                         </div>
