infowrapper & settingswrapper setup ++

--- a/index.html
+++ b/index.html
@@ -90,28 +90,25 @@
                 </ul>
 
                 <ul class="xmb_row active">
-                    <ul class="xmb_row_content focus">
+                    <ul class="xmb_row_content infos focus" id="welcomeTile">
                         <img src="assets/icons/xmb_welcome.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Welcome!</li>
 
-                        <div class="about-bg">
-                            <div class="infowrapper">
-                                <h1>Welcome to AminStation 3!</h1>
-                                <p>Navigate through the XMB menu using the arrow keys to have a look around, <br> press enter and esc to open/close a menu.</p>
-                                <p>Made by Amin Gatta</p>
-                            </div>
+                        <div class="infowrapper" id="maininfo">
+                            <h1>Welcome to AminStation 3!</h1>
+                            <p>Navigate through the XMB menu using the arrow keys to have a look around, <br> press enter and esc to open/close a menu.</p>
+                            <p>Made by Amin Gatta</p>
                         </div>
+
                     </ul>
 
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content infos">
                         <img src="assets/icons/user.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Who am I?</li>
 
-                        <div class="about-bg">
-                            <div class="infowrapper">
-                                <h1>Test</h1>
-                                <p>Toto tata</p>
-                            </div>
+                        <div class="infowrapper">
+                            <h1>Test</h1>
+                            <p>Toto tata</p>
                         </div>
                     </ul>
                 </ul>
@@ -124,7 +121,7 @@
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content focus">
+                    <ul class="xmb_row_content">
                         <img src="assets/icons/xmb_angular.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Angular</li>
                     </ul>
@@ -148,15 +145,13 @@
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content focus">
+                    <ul class="xmb_row_content infos">
                         <img src="assets/icons/xmb_folder.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Projet 1</li>
 
-                        <div class="about-bg">
-                            <div class="infowrapper">
-                                <h1>Test</h1>
-                                <p>Toto tata</p>
-                            </div>
+                        <div class="infowrapper">
+                            <h1>Test</h1>
+                            <p>Toto tata</p>
                         </div>
                     </ul>
 
@@ -184,7 +179,7 @@
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content focus">
+                    <ul class="xmb_row_content">
                         <img src="assets/icons/xmb_linkedin.png" alt="xmb_folder" class="xmb_row_icons">
                         <li class="xmb_row_text">Linkedin</li>
                     </ul>
@@ -208,7 +203,7 @@
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content focus">
+                    <ul class="xmb_row_content settings">
                         <img src="assets/icons/bg_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
                             <li class="xmb_row_text">Theme Settings</li>
@@ -216,7 +211,7 @@
                         </ul>
                     </ul>
 
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content settings">
                         <img src="assets/icons/sound_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
                             <li class="xmb_row_text">Sounds Settings</li>
@@ -224,7 +219,7 @@
                         </ul>
                     </ul>
 
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content settings">
                         <img src="assets/icons/xmb_date_settings.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
                             <li class="xmb_row_text">Date & time</li>
@@ -235,6 +230,9 @@
             </ul>
 
         </section>
+        <aside id="settingswrapper">
+            <p>WIP</p>
+        </aside>
     </main>
 
 </body>
