social medias interaction OK

--- a/index.html
+++ b/index.html
@@ -250,26 +250,35 @@
                 </ul>
 
                 <ul class="xmb_row">
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content social">
                         <img src="assets/icons/xmb_linkedin.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">Linkedin</li>
+                            <li class="xmb_row_text">
+                                <a hidden href="https://www.linkedin.com/in/amin-gatta-4547a41b7/"></a>
+                                Linkedin
+                            </li>
                             <li class="xmb_row_info">Add me &#128512;</li>
                         </ul>
                     </ul>
 
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content social">
                         <img src="assets/icons/xmb_github.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">Github</li>
+                            <li class="xmb_row_text">
+                                <a hidden href="https://github.com/AminGtt"></a>
+                                Github
+                            </li>
                             <li class="xmb_row_info">My amazing code</li>
                         </ul>
                     </ul>
 
-                    <ul class="xmb_row_content">
+                    <ul class="xmb_row_content social">
                         <img src="assets/icons/contact_me.png" alt="xmb_folder" class="xmb_row_icons">
                         <ul>
-                            <li class="xmb_row_text">Mail</li>
+                            <li class="xmb_row_text">
+                                <a hidden href="mailto:gatta.amin38@gmail.com"></a>
+                                Mail
+                            </li>
                             <li class="xmb_row_info">Wanna mail me?</li>
                         </ul>
                     </ul>
