theme settings interaction OK

--- a/index.html
+++ b/index.html
@@ -320,7 +320,74 @@
 
         </section>
         <aside id="settingswrapper">
-            <p>WIP</p>
+
+            <!-- At the end this part will be pushed in js depending the subsection -->
+
+            <section>
+                <label for="colorSelector">Color:</label>
+                <select name="colorSelector" id="colorSelector">
+                    <option value="37,89,179">sapphire</option>
+                    <option value="104,107,108">silk</option>
+                    <option value="26,115,115">turquoise</option>
+                    <option value="20,101,50">emerald</option>
+                    <option value="160,120,0">gold</option>
+                    <option value="116,15,48">ruby</option>
+                    <option value="118,6,135">amethyst</option>
+                    <option value="192,114,40">amber</option>
+                </select>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/sapphire.png" alt="sapphire_icon">
+                    <p>Sapphire</p>
+                </div>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/silk.png" alt="silk_icon">
+                    <p>Silk</p>
+                </div>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/turquoise.png" alt="turquoise_icon">
+                    <p>Turquoise</p>
+                </div>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/emerald.png" alt="emerald_icon">
+                    <p>Emerald</p>
+                </div>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/gold.png" alt="gold_icon">
+                    <p>Gold</p>
+                </div>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/ruby.png" alt="ruby_icon">
+                    <p>Ruby</p>
+                </div>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/amethyst.png" alt="amethyst_icon">
+                    <p>Amethyst</p>
+                </div>
+
+                <div class="colorwrapper">
+                    <img src="assets/icons/colors/amber.png" alt="amber_icon">
+                    <p>Amber</p>                
+                </div>
+
+            </section>
+            
+            <section>
+                <label for="particlesSelector">Particles:</label>
+                <input type="checkbox" id="particlesSelector" name="particlesSelector" checked>
+                <p>ON</p>
+            </section>
+    
+            <section>
+                <label for="brightnessSelector">Brightness:</label>
+                <input type="range" id="brightnessSelector" name="brightnessSelector" min="0" max="1.3" step="0.01" value="1.14">
+            </section>
         </aside>
     </main>
 
