continue settings, still bugs to fix

--- a/index.html
+++ b/index.html
@@ -413,12 +413,16 @@
                 </section>
             </article>
 
-            <article hidden id="soundSettings">
-
+            <article id="soundSettings">
+                <section>
+                    <p class="soundSelector">toto</p>
+                </section>
             </article>
 
-            <article hidden id="dateSettings">
-
+            <article id="dateSettings">
+                <section>
+                    <p class="dateSelector">tata</p>
+                </section>
             </article>
 
         </aside>
