--- a/index.html
+++ b/index.html
@@ -409,7 +409,18 @@
         
                 <section>
                     <label class="themeSelector" for="brightnessSelector">Brightness:</label>
-                    <input type="range" id="brightnessSelector" name="brightnessSelector" min="0" max="1.3" step="0.01" value="1.14">
+                    <input hidden type="range" id="brightnessSelector" name="brightnessSelector" min="0.05" max="1.35" step="0.1" value="1.15">
+                    
+                    <div class="brightnessTriggers">
+                        <div class="themewrapper">
+                            <p id="rm_bright"> - </p>
+                        </div>
+                        /
+                        <div class="themewrapper">
+                            <p id="add_bright"> + </p>
+                        </div>
+                    </div>
+
                 </section>
             </article>
 
